Introduce SPV mode and Neutrino mode to node

--- a/db-commons/src/main/resources/reference.conf
+++ b/db-commons/src/main/resources/reference.conf
@@ -37,6 +37,11 @@ bitcoin-s {
         disable-console = false
     }
 
+    node {
+        spv-mode = yes # yes, no, true, false
+        neutrino-mode = yes # yes, no, true, false
+    }
+
     # settings for wallet module
     wallet {
         defaultAccountType = legacy # legacy, segwit, nested-segwit
