--- a/db-commons/src/main/resources/reference.conf
+++ b/db-commons/src/main/resources/reference.conf
@@ -13,7 +13,7 @@ bitcoin-s {
         # The available loggers are: 
 
         # incoming and outgoing P2P messages
-        p2p = DEBUG
+        p2p = INFO
 
         # verification of block headers, merkle trees
         # chain-verification = info
