WIP: Initial BIP157 support

--- a/app/server/src/main/resources/application.conf
+++ b/app/server/src/main/resources/application.conf
@@ -1,3 +1,11 @@
 akka {
     loglevel = "INFO"
 }
+
+bitcoin-s {
+    node {
+        spv-mode = no # yes, no, true, false
+        neutrino-mode = yes # yes, no, true, false
+    }
+    logging.level = debug
+}
