make chain-verification log level INFO

--- a/db-commons/src/main/resources/reference.conf
+++ b/db-commons/src/main/resources/reference.conf
@@ -16,7 +16,7 @@ bitcoin-s {
         # p2p = info
 
         # verification of block headers, merkle trees
-        chain-verification = TRACE
+        # chain-verification = info
 
         # generation of addresses, signing of TXs
         # key-handling = info
