configurable filter batch sizes

--- a/app/server/src/main/resources/application.conf
+++ b/app/server/src/main/resources/application.conf
@@ -7,5 +7,5 @@ bitcoin-s {
         spv-mode = no # yes, no, true, false
         neutrino-mode = yes # yes, no, true, false
     }
-    logging.level = debug
+//    logging.level = debug
 }
