--- a/db-commons/src/main/resources/reference.conf
+++ b/db-commons/src/main/resources/reference.conf
@@ -42,6 +42,13 @@ bitcoin-s {
         neutrino-mode = yes # yes, no, true, false
     }
 
+    chain {
+        neutrino {
+            max-filter-header-count = 2000
+            max-filter-count = 100
+        }
+    }
+
     # settings for wallet module
     wallet {
         defaultAccountType = legacy # legacy, segwit, nested-segwit
