Update scalafmt ignore

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -37,8 +37,9 @@ binPack.literalArgumentLists = true
 
 project {
     excludeFilters = [
-        .bloop
-        .metals
+        .bloop,
+        .metals,
+        target
     ]
 }
 
