--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,7 @@ cache:
 # https://www.scala-sbt.org/1.x/docs/Travis-CI-with-sbt.html#Caching
 before_cache:
   # Cleanup the cached directories to avoid unnecessary cache updates
+  - rm -r $PWD/binaries/bitcoind/bitcoin-0.18.99
   - rm -fv $HOME/.ivy2/.sbt.ivy.lock
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
   - find $HOME/.sbt        -name "*.lock"               -print -delete
