some more changes

--- a/db-commons/src/main/resources/reference.conf
+++ b/db-commons/src/main/resources/reference.conf
@@ -38,14 +38,13 @@ bitcoin-s {
     }
 
     node {
-        spv-mode = yes # yes, no, true, false
-        neutrino-mode = yes # yes, no, true, false
+        mode = neutrino # neutrino, spv
     }
 
     chain {
         neutrino {
-            max-filter-header-count = 2000
-            max-filter-count = 100
+            filter-header-batch-size = 2000
+            filter-batch-size = 100
         }
     }
 
