revert testnet3 config parameter

--- a/db-commons/src/main/resources/reference.conf
+++ b/db-commons/src/main/resources/reference.conf
@@ -1,6 +1,6 @@
 bitcoin-s {
     datadir = ${HOME}/.bitcoin-s
-    network = regtest # regtest, testnet, mainnet
+    network = regtest # regtest, testnet3, mainnet
 
     logging {
         level = INFO # trace, debug, info, warn, error, off
