Enable akka logging to help debug NeutrinoNodeTest

--- a/testkit/src/main/resources/reference.conf
+++ b/testkit/src/main/resources/reference.conf
@@ -58,8 +58,8 @@ bitcoin-s {
 
 
 akka {
-    loglevel = "OFF"
-    stdout-loglevel = "OFF"
+    loglevel = "DEBUG"
+    stdout-loglevel = "DEBUG"
     http {
         client {
             # The time after which an idle connection will be automatically closed.
