Revert to bypassing the isInitialized() check in sendMsg()

--- a/testkit/src/main/resources/reference.conf
+++ b/testkit/src/main/resources/reference.conf
@@ -58,8 +58,8 @@ bitcoin-s {
 
 
 akka {
-    loglevel = "DEBUG"
-    stdout-loglevel = "DEBUG"
+    loglevel = "OFF"
+    stdout-loglevel = "OFF"
     http {
         client {
             # The time after which an idle connection will be automatically closed.
