--- a/.travis.yml
+++ b/.travis.yml
@@ -51,10 +51,12 @@ matrix:
         - TEST_COMMAND="walletTest/test wallet/coverageReport wallet/coverageAggregate wallet/coveralls"
       scala:
         - 2.13.0
+    # skip all test tagged as UsesExperimentalBitcoind
+    # TODO remove this condition once we have a neutrino enabled bitcoind binary for OSX
     - os: osx
       name: "macOS node tests"
       env:
-        - TEST_COMMAND="nodeTest/test node/coverageReport node/coverageAggregate node/coveralls"
+        - TEST_COMMAND="\"nodeTest/testOnly -- -l UsesExperimentalBitcoind\" node/coverageReport node/coverageAggregate node/coveralls"
       scala:
         - 2.13.0
 
