revert .travis and mark NeutrinoNodeTest as @DoNotDiscover

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ matrix:
     - os: osx
       name: "macOS node tests"
       env:
-        - TEST_COMMAND="'nodeTest/testOnly -- -l UsesExperimentalBitcoind' node/coverageReport node/coverageAggregate node/coveralls"
+        - TEST_COMMAND="nodeTest/test node/coverageReport node/coverageAggregate node/coveralls"
       scala:
         - 2.13.0
 
@@ -112,6 +112,4 @@ stages:
 
 script:
   # Modify PATH to include binaries we are about to download
-  - sbt ++$TRAVIS_SCALA_VERSION downloadBitcoind downloadEclair
-  - sbt coverage
-  - sbt $TEST_COMMAND
+  - sbt ++$TRAVIS_SCALA_VERSION downloadBitcoind downloadEclair coverage $TEST_COMMAND
