Add coverage minimum for key manager, add KeyManagerParams, start adding KeyManager test harness

--- a/testkit/src/main/resources/reference.conf
+++ b/testkit/src/main/resources/reference.conf
@@ -22,7 +22,7 @@ bitcoin-s {
         # key-handling = info
 
         # wallet operations not related to key management
-        # wallet = info
+        wallet = info
 
         # HTTP RPC server
         # http = info
