Add mac osx ci matrix to include dlcTest/test

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ matrix:
     - os: osx
       name: "macOS wallet tests"
       env:
-        - TEST_COMMAND="walletTest/test wallet/coverageReport wallet/coverageAggregate wallet/coveralls"
+        - TEST_COMMAND="dlcTest/test dlc/coverageReport dlc/coverageAggregate dlc/coveralls walletTest/test wallet/coverageReport wallet/coverageAggregate wallet/coveralls"
       scala:
         - 2.13.1
     # skip all test tagged as UsesExperimentalBitcoind
