--- a/.travis.yml
+++ b/.travis.yml
@@ -84,6 +84,7 @@ cache:
 
 # https://www.scala-sbt.org/1.x/docs/Travis-CI-with-sbt.html#Caching
 before_cache:
+  - ls -lR $HOME/.bitcoin-s/binaries
   # Cleanup the cached directories to avoid unnecessary cache updates
   - rm -fv $HOME/.ivy2/.sbt.ivy.lock
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
