Set logback to true for tests, rename file

--- a/testkit/src/main/resources/reference.conf
+++ b/testkit/src/main/resources/reference.conf
@@ -4,7 +4,7 @@ bitcoin-s {
 
     logging {
         # Ignore bitcoin-s logging config and use a logback config
-        logback = false
+        logback = true
 
         level = WARN # trace, debug, info, warn, error, off
 
