--- a/testkit/src/main/resources/reference.conf
+++ b/testkit/src/main/resources/reference.conf
@@ -6,7 +6,7 @@ bitcoin-s {
         # Ignore bitcoin-s logging config and use a logback config
         logback = true
 
-        level = DEBUG # trace, debug, info, warn, error, off
+        level = WARN # trace, debug, info, warn, error, off
 
         # You can also tune specific module loggers.
         # They each take the same levels as above.
