--- a/testkit/src/main/resources/reference.conf
+++ b/testkit/src/main/resources/reference.conf
@@ -104,7 +104,6 @@ akka {
         }
     }
 
-
     actor {
         debug {
             # enable DEBUG logging of all AutoReceiveMessages (Kill, PoisonPill etc.)
@@ -119,6 +118,18 @@ akka {
             lifecycle = off
 
             event-stream=off
+        }
+        default-dispatcher {
+            # The goal here is to reduce the number of threads spun up for test suites.
+            # Since every test suite currently
+            # has it's own actor system, we should limit the number of threads in the system
+            fork-join-executor {
+                # minimum of one thread for tests
+                parallelism-min = 1
+
+                # maximum of 2 threads for tests
+                parallelism-max = 2
+            }
         }
     }
 }
