--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: scala
+os: linux
+dist: xenial
 
 jobs:
   include:
@@ -7,63 +9,56 @@ jobs:
       name: "Compile"
       env:
         - TEST_COMMAND="test:compile"
+      scala: 2.12.11
 
     # compile website, to check for documentation regressions
     - stage: test
       name: Compile website and check formatting
       env:
         - TEST_COMMAND="scalafmtCheck test:scalafmtCheck docs/mdoc"
-      scala:
-        - 2.13.2
+      scala: 2.13.2
 
     - stage: test
       name: Linux 2.13.2 bitcoind and eclair rpc tests
       os: linux
       env:
         - TEST_COMMAND="bitcoindRpcTest/test bitcoindRpc/coverageReport bitcoindRpc/coverageAggregate bitcoindRpc/coveralls eclairRpcTest/test eclairRpc/coverageReport eclairRpc/coverageAggregate eclairRpc/coveralls"
-      scala:
-        - 2.13.2
+      scala: 2.13.2
 
     - stage: test
       name: Linux 2.12.11 bitcoind and eclair rpc tests
       os: linux
       env:
         - TEST_COMMAND="bitcoindRpcTest/test bitcoindRpc/coverageReport bitcoindRpc/coverageAggregate bitcoindRpc/coveralls eclairRpcTest/test eclairRpc/coverageReport eclairRpc/coverageAggregate eclairRpc/coveralls"
-      scala:
-        - 2.12.11
-        - 2.13.2
+      scala: 2.12.11
 
     - stage: test
       name: Linux 2.13.2 App, Chain, Node, and Core Tests
       os: linux
       env:
         - TEST_COMMAND="appCommonsTest/test appServerTest/test chainTest/test chain/coverageReport chain/coverageAggregate chain/coveralls nodeTest/test node/coverageReport node/coverageAggregate node/coveralls cryptoTest/test crypto/coverageReport crypto/coverageAggregate crypto/coveralls coreTest/test core/coverageReport core/coverageAggregate core/coveralls secp256k1jni/test zmq/test zmq/coverageReport zmq/coverageAggregate zmq/coveralls"
-      scala:
-        - 2.13.2
+      scala: 2.13.2
 
     - stage: test
       name: Linux 2.12.11 App, Chain, Node, and Core Tests
       os: linux
       env:
         - TEST_COMMAND="appCommonsTest/test appServerTest/test chainTest/test chain/coverageReport chain/coverageAggregate chain/coveralls nodeTest/test node/coverageReport node/coverageAggregate node/coveralls cryptoTest/test crypto/coverageReport crypto/coverageAggregate crypto/coveralls coreTest/test core/coverageReport core/coverageAggregate core/coveralls secp256k1jni/test zmq/test zmq/coverageReport zmq/coverageAggregate zmq/coveralls"
-      scala:
-        - 2.12.11
+      scala: 2.12.11
 
     - stage: test
       name: Linux 2.13.2 KeyManager and Wallet tests
       os: linux
       env:
         - TEST_COMMAND="keyManagerTest/test keyManager/coverageReport keyManager/coverageAggregate keyManager/coveralls walletTest/test wallet/coverageReport wallet/coverageAggregate wallet/coveralls"
-      scala:
-        - 2.13.2
+      scala: 2.13.2
 
     - stage: test
       name: Linux 2.12.11 KeyManager and Wallet tests
       os: linux
       env:
         - TEST_COMMAND="keyManagerTest/test keyManager/coverageReport keyManager/coverageAggregate keyManager/coveralls walletTest/test wallet/coverageReport wallet/coverageAggregate wallet/coveralls"
-      scala:
-        - 2.12.11
+      scala: 2.12.11
 
     - stage: test
       os: linux
@@ -71,8 +66,7 @@ jobs:
       env:
         - DISABLE_SECP256K1="true"
         - TEST_COMMAND="coreTest/test cryptoTest/test"
-      scala:
-        - 2.13.2
+      scala: 2.13.2
 
     - stage: test
       os: linux
@@ -80,16 +74,14 @@ jobs:
       env:
         - PG_ENABLED="1"
         - TEST_COMMAND="dbCommonsTest/test chainTest/test nodeTest/test walletTest/test"
-      scala:
-        - 2.13.2
+      scala: 2.13.2
 
     - stage: test
       os: osx
       name: "macOS bitcoind and eclair tests"
       env:
         - TEST_COMMAND="appCommonsTest/test bitcoindRpcTest/test bitcoindRpc/coverageReport bitcoindRpc/coverageAggregate bitcoindRpc/coveralls eclairRpcTest/test eclairRpc/coverageReport eclairRpc/coverageAggregate eclairRpc/coveralls"
-      scala:
-        - 2.13.2
+      scala: 2.13.2
 
     # skip all test tagged as UsesExperimentalBitcoind
     # TODO remove this condition once we have a neutrino enabled bitcoind binary for OSX
@@ -99,8 +91,7 @@ jobs:
       env:
         - CI="1"
         - TEST_COMMAND="walletTest/test wallet/coverageReport wallet/coverageAggregate wallet/coveralls nodeTest/test node/coverageReport node/coverageAggregate node/coveralls"
-      scala:
-        - 2.13.2
+      scala: 2.13.2
 
     # Release snapshots/versions of all libraries
     # run ci-release only if previous stages passed
@@ -140,13 +131,13 @@ stages:
       commit_message !~ /^Docs:/ AND NOT
       ((branch = master AND type = push) OR (tag IS present))
       # don't run tests on merge builds, just publish library
-    # and website
+      # and website
   - name: test
     if:
       commit_message !~ /^Docs:/ AND NOT
       ((branch = master AND type = push) OR (tag IS present))
       # don't run tests on merge builds, just publish library
-    # and website
+      # and website
   - name: release
     if: ((branch = master AND type = push) OR (tag IS present)) AND NOT fork
 
