Add limits for internal dispatcher and default blocking io dispatcher

--- a/testkit/src/main/resources/reference.conf
+++ b/testkit/src/main/resources/reference.conf
@@ -130,6 +130,20 @@ akka {
                 # maximum of 2 threads for tests
                 parallelism-max = 2
             }
+            default-blocking-io-dispatcher {
+                # minimum of one thread for tests
+                parallelism-min = 1
+
+                # maximum of 2 threads for tests
+                parallelism-max = 2
+            }
+            internal-dispatcher {
+                # minimum of one thread for tests
+                parallelism-min = 1
+
+                # maximum of 2 threads for tests
+                parallelism-max = 2
+            }
         }
     }
 }
