--- a/testkit/src/main/resources/reference.conf
+++ b/testkit/src/main/resources/reference.conf
@@ -129,20 +129,37 @@ akka {
 
                 # maximum of 2 threads for tests
                 parallelism-max = 2
+                fixed-pool-size = 1
             }
-            default-blocking-io-dispatcher {
-                # minimum of one thread for tests
-                parallelism-min = 1
-
-                # maximum of 2 threads for tests
-                parallelism-max = 2
+            thread-pool-executor {
+                fixed-pool-size = 1
             }
-            internal-dispatcher {
-                # minimum of one thread for tests
-                parallelism-min = 1
+        }
+        default-blocking-io-dispatcher {
+            # minimum of one thread for tests
+            parallelism-min = 1
 
-                # maximum of 2 threads for tests
-                parallelism-max = 2
+            # maximum of 2 threads for tests
+            parallelism-max = 2
+
+            type = "Dispatcher"
+            executor = "thread-pool-executor"
+            throughput = 1
+            thread-pool-executor {
+                fixed-pool-size = 1
+            }
+        }
+        internal-dispatcher {
+            # minimum of one thread for tests
+            parallelism-min = 1
+
+            # maximum of 2 threads for tests
+            parallelism-max = 2
+            type = "Dispatcher"
+            executor = "thread-pool-executor"
+            throughput = 1
+            thread-pool-executor {
+                fixed-pool-size = 1
             }
         }
     }
