dOcS: ignore case

--- a/.travis.yml
+++ b/.travis.yml
@@ -134,19 +134,19 @@ before_script:
 stages:
   - name: docs
     if:
-      commit_message =~ /^Docs:/ AND NOT
+      commit_message =~ /(?i)^docs:/ AND NOT
       ((branch = master AND type = push) OR (tag IS present))
     # don't run tests on merge builds, just publish library
     # and website
   - name: compile
     if:
-      commit_message !~ /^Docs:/ AND NOT
+      commit_message !~ /(?i)^docs:/ AND NOT
       ((branch = master AND type = push) OR (tag IS present))
     # don't run tests on merge builds, just publish library
     # and website
   - name: test
     if:
-      commit_message !~ /^Docs:/ AND NOT
+      commit_message !~ /(?i)^docs:/ AND NOT
       ((branch = master AND type = push) OR (tag IS present))
     # don't run tests on merge builds, just publish library
     # and website
